# adi-agi-found

./: .env.example  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile.proxy
src/adi_agi_found/: api.py  audit.py  backends.py  circuit.py  config.py  dlq.py  memory.py  metrics.py  retry.py  router.py  sandbox.py  swarm.py  verifier.py
src/adi_agi_found.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: run_unittests.py  test_contradiction.py  test_models.py  test_sandbox.py
tools/asr_service/: Dockerfile  app.py
tools/sandbox_service/: Dockerfile  app.py
tools/tts_service/: Dockerfile  app.py
